[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sickrock_client"
version = "0.2.1"
description = "Python client and CLI for the SickRock Connect API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Read", email = "contact@jread.com" },
]
keywords = ["sickrock", "connect", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "configargparse>=1.5",
]

[project.urls]
Homepage = "https://github.com/jamesread/sickrock-python"
Repository = "https://github.com/jamesread/sickrock-python"
Issues = "https://github.com/jamesread/sickrock-python/issues"

[project.scripts]
sickrock = "sickrock_client.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sickrock_client = ["openapi.json"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["sickrock_client/__init__.py:__version__"]
tag_format = "v{version}"
allow_zero_version = true
build_command = "python -m pip install --upgrade build && python -m build"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
